# IEC-IEEE-62704-1-spatial-average-SAR

./: .gitignore  CITATION.cff  LICENSE  README.md  spatialAverageSAR.py
core/: CMakeLists.txt  auxFuncs.c  avgSARStep1.c  avgSARStep2.c
core/include/: auxFuncs.h  globals.h  globals.h.in
others/: log_file_10g.txt  log_file_1g.txt
tools/: prepare_SAR_star_data.m  process_SAR_star_data.m  sortReport.py
